Fix text shifting

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   color: rgba(228, 52, 52, 1);
   font-weight: 100;
   -webkit-font-smoothing: antialiased;
+  -webkit-backface-visibility: hidden;
 }
 
 html, body {
